--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"next": "16.0.7",
 		"react": "19.2.1",
 		"react-dom": "19.2.0",
+		"react-photo-view": "^1.2.7",
 		"shiki": "^3.15.0",
 		"sonner": "^2.0.7",
 		"swr": "^2.3.6",
