--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,12 @@
 name = "blog-2025"
 compatibility_date = "2024-12-01"
+compatibility_flags = ["nodejs_compat"]
+main = ".open-next/worker.js"
+
+# 静态资源
+[assets]
+directory = ".open-next/assets"
+binding = "ASSETS"
 
 # D1 数据库绑定
 [[d1_databases]]
