--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"tailwindcss": "^4",
-		"typescript": "^5"
+		"typescript": "^5",
+		"wrangler": "^4.54.0"
 	}
 }
