chore: add pages_build_output_dir to wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@ name = "blog-2025"
 compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 main = ".open-next/worker.js"
+pages_build_output_dir = ".open-next/assets"
 
 # 静态资源
 [assets]
