--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,5 @@
-name = "blog-2025"
+# wrangler.toml
+name = '0n0'
 compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 main = ".open-next/worker.js"
