--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev --turbopack -p 2025",
 		"svg": "node scripts/gen-svgs-index.js",
-		"build": "next build --turbopack",
+		"build": "next build",
 		"build:cf": "npx opennextjs-cloudflare build",
 		"deploy": "npm run build:cf && npx wrangler deploy",
 		"start": "next start",
